<?xml version="1.0"?>
<package format="2">
  <name>flatland_npp</name>
  <version>1.0.0</version>
  <description>
    Flatland port of the stdr version of turtlebot simulation. Convenient to test 2D-navigation related stuffs
  </description>

  <maintainer email="alanhesu@gmail.com">Alan Hesu</maintainer>
  <!--<author email="mehdi.tlili@gmail.com">Joseph Duchesne</author>-->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>flatland_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>flatland_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>flatland_msgs</exec_depend>
  <exec_depend>flatland_plugins</exec_depend>
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>yocs_virtual_sensor</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
